[gd_scene load_steps=6 format=3 uid="uid://buons7dyfdoh5"]

[ext_resource type="Script" path="res://Boards/CardAndDeckInterface.gd" id="1_joqys"]
[ext_resource type="Texture2D" uid="uid://cb2nwjm8445j1" path="res://assets/campfire.png" id="2_qyibg"]
[ext_resource type="Texture2D" uid="uid://wkjqr05fbrvd" path="res://assets/campfire disabled.png" id="3_ao8ll"]
[ext_resource type="Texture2D" uid="uid://df5oto2vrsfe6" path="res://assets/Cards/card back red.png" id="4_07rbh"]
[ext_resource type="Texture2D" uid="uid://ctaj7sehr0cll" path="res://assets/Cards/card back black.png" id="5_c8pmk"]

[node name="Card & Deck UI" type="CanvasLayer"]

[node name="Player Hand" type="HBoxContainer" parent="."]
clip_contents = true
offset_left = 126.0
offset_top = 463.0
offset_right = 3542.0
offset_bottom = 1095.0
scale = Vector2(0.25, 0.25)
theme_override_constants/separation = 4
script = ExtResource("1_joqys")

[node name="Sacrifice Button" type="TextureButton" parent="."]
offset_left = 1017.0
offset_top = 514.0
offset_right = 1128.0
offset_bottom = 622.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource("2_qyibg")
texture_disabled = ExtResource("3_ao8ll")
ignore_texture_size = true
stretch_mode = 4

[node name="Action Button" type="Button" parent="."]
offset_left = 999.0
offset_top = 461.0
offset_right = 1141.0
offset_bottom = 500.0
text = "Play Card"

[node name="Draw Deck" type="TextureRect" parent="."]
offset_left = 15.0
offset_top = 497.0
offset_right = 99.0
offset_bottom = 630.0
texture = ExtResource("4_07rbh")
expand_mode = 1

[node name="Events Deck" type="TextureRect" parent="."]
offset_left = 16.0
offset_top = 355.0
offset_right = 100.0
offset_bottom = 488.0
texture = ExtResource("5_c8pmk")
expand_mode = 1

[node name="EventCardVisual" type="TextureRect" parent="."]
offset_left = 469.0
offset_top = 98.0
offset_right = 638.0
offset_bottom = 362.0
expand_mode = 3

[connection signal="pressed" from="Sacrifice Button" to="Player Hand" method="_on_sacrifice_button_pressed"]
[connection signal="pressed" from="Action Button" to="Player Hand" method="_on_action_button_pressed"]
